--- a/AppScheduler/MainForm.resx
+++ b/AppScheduler/MainForm.resx
@@ -130,14 +130,11 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</valu
 data usage. If data usage exceed the limit, Application Scheduler will stop the running application.
 
 Example usage is in Indonesia, there is one 3G data provider who give bonus data in the middle 
-of the night with limited data usage. For example: bonus valid between 2.00 AM - 2.59 AM
-with limit 300 MB. It's such a waste to not using it and of course you are sleeping at night.
-Which make such bonus useless.
+of the night with limited data usage. Bonus valid between 2.00 AM - 2.59 AM with limit 300 MB. 
+It's such a waste to not using it and of course you are sleeping at night. Which make such bonus useless.
 
 With this application, one can start downloader application and just left this Scheduler running. 
-It will start downloader at specified time and stop it when end time or data limit exceeded.
-
-</value>
+It will start downloader at specified time and stop it when end time or data limit exceeded.</value>
   </data>
   <metadata name="openFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
